change title to name _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Minimal theme
+title: Debu Patra
 logo: /assets/img/debu-head.jpeg
 # description: Minimal is a theme for GitHub Pages.
 # show_downloads: true
